--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ isort = "^5.12.0"
 mypy = "^1.0.1"
 pytest-cov = "^4.1.0"
 coverage-badge = "^1.1.0"
+ipykernel = "^6.23.2"
 
 [build-system]
 requires = ["poetry-core"]
