--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ repository = "https://github.com/mivanit/ZANJ"
 [tool.poetry.dependencies]
 python = "^3.10"
 muutils = "^0.5.0"
-torch = "^1.13.1"
+torch = ">=1.13.1"
 numpy = "^1.22.4"
 jaxtyping = "^0.2.12"
 pandas = "^1.5.3"
