--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -27,9 +27,13 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version:
-          - "3.10"
-          - "3.11"
+        versions:
+          - python: "3.10"
+            torch: "1.13.1"
+          - python: "3.10"
+            torch: "2.0.1"
+          - python: "3.11"
+            torch: "2.0.1"
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -43,7 +47,9 @@ jobs:
         run: |
           curl -sSL https://install.python-poetry.org | python3 -
           poetry lock --check
-          poetry install
+          export CUDA_VISIBLE_DEVICES=0
+          poetry add torch@${{ matrix.versions.torch }}+cpu --source torch_cpu
+          poetry install --all-extras
       - name: tests
         run: make test
       - name: lint
