--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ repository = "https://github.com/mivanit/ZANJ"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-muutils = {version = ">=0.5.1,<0.7.0", extras = ["array"]}
+muutils = {version = "^0.6.0", extras = ["array"]}
 pandas = {version = ">=1.5.3", optional = true}
 
 [tool.poetry.extras]
