--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -15,12 +15,52 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with: 
+          fetch-depth: 0
 
       - name: Install linters
-        run: pip install pycln isort black
+        run: make setup-format RUN_GLOBAL=1
 
       - name: Run Format Checks
-        run: make check-format
+        run: make check-format RUN_GLOBAL=1
+
+  
+  check-deps:
+    name: Check dependencies
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
+      - name: Install Poetry
+        run: curl -sSL https://install.python-poetry.org | python3 -
+      
+      - name: Poetry Plugins
+        run: |
+          poetry self add poetry-plugin-export
+          poetry self show plugins
+
+      - name: Check poetry.lock and .github/dev-requirements.txt
+        run: make check-dep-dev
+
+      - name: Install uv
+        run: pip install uv
+
+      - name: Install dependencies
+        run: uv pip install -r .github/dev-requirements.txt --system --no-deps # we already should have all dependencies exported into .github/dev-requirements.txt
+      
+      - name: Install torch (special)
+        run: uv pip install torch==2.3.1+cpu --system --extra-index-url https://download.pytorch.org/whl/cpu
+
+      - name: Install zanj (local)
+        run: uv pip install . --system
 
   test:
     name: Test and Lint
@@ -43,20 +83,33 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with: 
+          fetch-depth: 0
 
       - name: Set up python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.versions.python }}
 
+      - name: Install uv
+        run: pip install uv
+  
       - name: Install dependencies
+        # install torch first to avoid pytorch index messing things up
         run: |
-          curl -sSL https://install.python-poetry.org | python3 -
-          poetry lock --check
-          export CUDA_VISIBLE_DEVICES=0
-          poetry add torch@${{ matrix.versions.torch }}+cpu --source torch_cpu
-          poetry install --all-extras
+          uv pip install -r .github/dev-requirements.txt --system --no-deps
+          uv pip install torch==${{ matrix.versions.torch}}+cpu --system --extra-index-url https://download.pytorch.org/whl/cpu
+        
+      - name: Install zanj
+        run: uv pip install . --system
+        
       - name: tests
-        run: make test
-      - name: lint
-        run: make lint
+        run: make test RUN_GLOBAL=1
+
+      # - name: tests in strict mode
+      #   # TODO: until zanj ported to 3.8 and 3.9
+      #   if: ${{ matrix.versions.python != '3.8' && matrix.versions.python != '3.9' }}
+      #   run: make test WARN_STRICT=1 RUN_GLOBAL=1
+
+      - name: check typing
+        run: make typing RUN_GLOBAL=1
