--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,14 +31,14 @@ pandas = ["pandas"]
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.1"
-black = "^24.4.2"
-pylint = "^2.16.4"
-pycln = "^2.4.0"
-isort = "^5.13.2"
 mypy = "^1.0.1"
 pytest-cov = "^4.1.0"
 coverage-badge = "^1.1.1"
 ipykernel = "^6.23.2"
+
+[tool.poetry.group.lint.dependencies]
+pycln = "^2.1.3"
+ruff = "^0.4.8"
 
 [[tool.poetry.source]]
 name = "torch_cpu"
@@ -51,11 +51,6 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.pycln]
 all = true
-
-[tool.isort]
-profile = "black"
-ignore_comments = false
-extend_skip = ["_wip"]
 
 [tool.mypy]
 show_error_codes = true
