--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,56 +1,137 @@
-[tool.poetry]
-name = "zanj"
-version = "0.3.1"
-description = "save and load complex objects to disk without pickling"
-license = "GPL-3.0-only"
-authors = ["mivanit <mivanits@umich.edu>"]
-readme = "README.md"
-classifiers=[
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3.12",
-    "Development Status :: 4 - Beta",
-    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
-    "Operating System :: OS Independent",
-]
-repository = "https://github.com/mivanit/ZANJ"
+[project]
+    name = "zanj"
+    version = "0.4.0"
+    description = "save and load complex objects to disk without pickling"
+    license = "GPL-3.0-only"
+    authors = [
+        { name = "mivanit", email = "mivanits@umich.edu" }
+    ]
+    readme = "README.md"
+    requires-python = ">=3.8"
+    classifiers=[
+        "Programming Language :: Python :: 3.8",
+        "Programming Language :: Python :: 3.9",
+        "Programming Language :: Python :: 3.10",
+        "Programming Language :: Python :: 3.11",
+        "Programming Language :: Python :: 3.12",
+        "Development Status :: 4 - Beta",
+        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
+        "Operating System :: OS Independent",
+    ]
 
-[tool.poetry.dependencies]
-python = "^3.8"
-muutils = {version = "^0.6.1", extras = ["array"]}
-pandas = {version = ">=1.5.3", optional = true}
-numpy = [
-    { version = "^1.24.4", optional = true, markers = "python_version < '3.9'" },
-    { version = "^1.26.4", optional = true, markers = "python_version >= '3.9'" },
-]
+    dependencies = [
+        "numpy>=1.24.4",
+        "muutils[array]>=0.6.1",
+    ]
 
-[tool.poetry.extras]
-pandas = ["pandas"]
 
-[tool.poetry.group.dev.dependencies]
-pytest = "^7.2.1"
-mypy = "^1.0.1"
-pytest-cov = "^4.1.0"
-coverage-badge = "^1.1.1"
-ipykernel = "^6.23.2"
+[project.optional-dependencies]
+pandas = ["pandas>=1.5.3"]
 
-[tool.poetry.group.lint.dependencies]
-pycln = "^2.1.3"
-ruff = "^0.4.8"
+[project.urls]
+    Homepage = "https://miv.name/zanj"
+    Repository = "https://github.com/mivanit/zanj"
+    Documentation = "https://miv.name/zanj/"
+	Issues = "https://github.com/mivanit/ZANJ/issues"
 
-[[tool.poetry.source]]
-name = "torch_cpu"
-url = "https://download.pytorch.org/whl/cpu"
-priority = "explicit"
+
+
+[dependency-groups]
+    dev = [
+        # typing
+        "mypy>=1.0.1",
+        # tests & coverage
+        "pytest>=8.2.2",
+        "pytest-cov>=4.1.0",
+        "coverage-badge>=1.1.1",
+        # for testing plotting and notebooks
+        "ipykernel>=6.23.2",
+        "jupyter",
+        "matplotlib>=3.0.0",
+        "plotly>=5.0.0",
+        # generating docs
+        "pdoc>=14.6.0",
+        # https://github.com/mivanit/muutils/security/dependabot/7
+        "jinja2>=3.1.5",
+        # lmcat -- a custom library. not exactly docs, but lets an LLM see all the code
+        "lmcat>=0.2.0; python_version >= '3.11'",
+        # tomli since no tomlib in python < 3.11
+        "tomli>=2.1.0; python_version < '3.11'",
+    ]
+    lint = [
+        # lint
+        "pycln>=2.1.3",
+        "ruff>=0.4.8",
+    ]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+    requires = ["hatchling"]
+    build-backend = "hatchling.build"
+
+
+[tool.ruff]
+    exclude = ["tests/input_data", "tests/junk_data"]
 
 [tool.pycln]
-all = true
+    all = true
+    exclude = ["tests/input_data", "tests/junk_data"]
 
 [tool.mypy]
-show_error_codes = true
+    exclude = ["tests/input_data", "tests/junk_data"]
+    show_error_codes = true
+
+# for configuring this tool (makefile, make_docs.py)
+# ============================================================
+[tool.makefile]
+[tool.makefile.docs]
+    output_dir = "docs"
+    no_clean = [
+        ".nojekyll",  # For GitHub Pages
+        "temp",
+    ]
+    markdown_headings_increment = 2
+    warnings_ignore = []
+
+    [tool.makefile.docs.notebooks]
+        enabled = true
+        source_path = "."
+        output_path_relative = "notebooks"
+        [tool.makefile.docs.notebooks.descriptions]
+            "demo" = "Example notebook showing basic usage"
+
+
+[tool.makefile.uv-exports]
+	args = [
+		"--no-hashes"
+	]
+	exports = [
+		# no groups, no extras, just the base dependencies
+		{ name = "base", groups = false, extras = false },
+		# all groups
+		{ name = "groups", groups = true, extras = false },
+		# only the lint group -- custom options for this
+		{ name = "lint", options = ["--only-group", "lint"] },
+		# # all groups and extras
+		{ name = "all", filename="requirements.txt", groups = true, extras=true },
+		# # all groups and extras, a different way
+		{ name = "all", groups = true, options = ["--all-extras"] },
+	]
+
+# configures `make todo`
+[tool.makefile.inline-todo]
+	search_dir = "."
+	out_file = "docs/other/todo-inline.md"
+	context_lines = 2
+	extensions = ["py", "md"]
+	tags = ["CRIT", "TODO", "FIXME", "HACK", "BUG", "DOC"]
+	exclude = [
+		"docs/**",
+		".venv/**",
+	]
+    [tool.makefile.inline-todo.tag_label_map]
+        "BUG" = "bug"
+        "TODO" = "enhancement"
+		"DOC" = "documentation"
+
+# ============================================================
+
