--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -31,7 +31,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: [3.8, 3.9, 3.10, 3.11, 3.12, 3.13]
+        python: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
         torch: ["1.13.1", "2.3.1", ""]
         numpy: ["1.21.2", "2.2.0", ""]
         # exclude:
