--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -34,7 +34,7 @@ jobs:
         python: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
         pkg:
           - torch: "1.13.1"
-            numpy: "1.26.4"
+            numpy: "1.24.4"
             group: "legacy"
           - torch: ""
             numpy: ""
@@ -82,12 +82,12 @@ jobs:
       - name: install dependencies and package
         run: make dep
 
-      - name: Install pytorch
+      - name: Install different pytorch version
         if: ${{ matrix.pkg.torch != '' }}
         run: |
           uv pip install torch==${{ matrix.pkg.torch }}+cpu --extra-index-url https://download.pytorch.org/whl/cpu
       
-      - name: Install numpy
+      - name: Install different numpy version
         if: ${{ matrix.pkg.numpy != '' }}
         run: uv pip install numpy==${{ matrix.pkg.numpy }}
       
