--- a/.meta/requirements/requirements.txt
+++ b/.meta/requirements/requirements.txt
@@ -13,6 +13,7 @@ async-lru==2.0.4
 attrs==25.1.0
 babel==2.17.0
 backcall==0.2.0 ; python_full_version < '3.9'
+backports-tarfile==1.2.0 ; python_full_version < '3.12' and platform_machine != 'ppc64le' and platform_machine != 's390x'
 beautifulsoup4==4.13.3
 bleach==6.1.0 ; python_full_version < '3.9'
 bleach==6.2.0 ; python_full_version >= '3.9'
@@ -30,10 +31,13 @@ contourpy==1.3.1 ; python_full_version >= '3.10'
 coverage==7.6.1 ; python_full_version < '3.9'
 coverage==7.6.12 ; python_full_version >= '3.9'
 coverage-badge==1.1.2
+cryptography==44.0.2 ; platform_machine != 'ppc64le' and platform_machine != 's390x' and sys_platform == 'linux'
 cycler==0.12.1
 debugpy==1.8.12
 decorator==5.1.1
 defusedxml==0.7.1
+docutils==0.20.1 ; python_full_version < '3.9'
+docutils==0.21.2 ; python_full_version >= '3.9'
 exceptiongroup==1.2.2 ; python_full_version < '3.11'
 executing==2.2.0
 fastjsonschema==2.21.1
@@ -45,10 +49,11 @@ fsspec==2025.2.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
+id==1.5.0
 idna==3.10
 igittigitt==2.1.5 ; python_full_version >= '3.11'
 importlib-metadata==8.5.0 ; python_full_version < '3.9'
-importlib-metadata==8.6.1 ; python_full_version == '3.9.*'
+importlib-metadata==8.6.1 ; (python_full_version >= '3.9' and python_full_version < '3.12' and platform_machine != 'ppc64le' and platform_machine != 's390x') or (python_full_version == '3.9.*' and platform_machine == 'ppc64le') or (python_full_version == '3.9.*' and platform_machine == 's390x')
 importlib-resources==6.4.5 ; python_full_version < '3.9'
 importlib-resources==6.5.2 ; python_full_version == '3.9.*'
 iniconfig==2.0.0
@@ -58,10 +63,14 @@ ipython==8.18.1 ; python_full_version == '3.9.*'
 ipython==8.32.0 ; python_full_version >= '3.10'
 ipywidgets==8.1.5
 isoduration==20.11.0
+jaraco-classes==3.4.0 ; platform_machine != 'ppc64le' and platform_machine != 's390x'
+jaraco-context==6.0.1 ; platform_machine != 'ppc64le' and platform_machine != 's390x'
+jaraco-functools==4.1.0 ; platform_machine != 'ppc64le' and platform_machine != 's390x'
 jaxtyping==0.2.19 ; python_full_version < '3.9'
 jaxtyping==0.2.36 ; python_full_version == '3.9.*'
 jaxtyping==0.2.38 ; python_full_version >= '3.10'
 jedi==0.19.2
+jeepney==0.9.0 ; platform_machine != 'ppc64le' and platform_machine != 's390x' and sys_platform == 'linux'
 jinja2==3.1.6
 json5==0.10.0
 jsonpointer==3.0.0
@@ -82,6 +91,8 @@ jupyterlab==4.3.5
 jupyterlab-pygments==0.3.0
 jupyterlab-server==2.27.3
 jupyterlab-widgets==3.0.13
+keyring==25.5.0 ; python_full_version < '3.9' and platform_machine != 'ppc64le' and platform_machine != 's390x'
+keyring==25.6.0 ; python_full_version >= '3.9' and platform_machine != 'ppc64le' and platform_machine != 's390x'
 kiwisolver==1.4.7 ; python_full_version < '3.10'
 kiwisolver==1.4.8 ; python_full_version >= '3.10'
 lib-detect-testenv==2.0.8 ; python_full_version >= '3.11'
@@ -97,6 +108,8 @@ matplotlib==3.10.0 ; python_full_version >= '3.10'
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 mistune==3.1.1
+more-itertools==10.5.0 ; python_full_version < '3.9' and platform_machine != 'ppc64le' and platform_machine != 's390x'
+more-itertools==10.6.0 ; python_full_version >= '3.9' and platform_machine != 'ppc64le' and platform_machine != 's390x'
 mpmath==1.3.0
 muutils==0.8.0
 mypy==1.14.1 ; python_full_version < '3.9'
@@ -111,6 +124,7 @@ nest-asyncio==1.6.0
 networkx==3.1 ; python_full_version < '3.9'
 networkx==3.2.1 ; python_full_version == '3.9.*'
 networkx==3.4.2 ; python_full_version >= '3.10'
+nh3==0.2.21
 notebook==7.3.2
 notebook-shim==0.2.4
 numpy==1.24.4 ; python_full_version < '3.9'
@@ -173,19 +187,25 @@ python-dateutil==2.9.0.post0
 python-json-logger==3.2.1
 pytz==2025.1
 pywin32==308 ; platform_python_implementation != 'PyPy' and sys_platform == 'win32'
+pywin32-ctypes==0.2.3 ; platform_machine != 'ppc64le' and platform_machine != 's390x' and sys_platform == 'win32'
 pywinpty==2.0.14 ; python_full_version < '3.9' and os_name == 'nt'
 pywinpty==2.0.15 ; python_full_version >= '3.9' and os_name == 'nt'
 pyyaml==6.0.2
 pyzmq==26.2.1
+readme-renderer==43.0 ; python_full_version < '3.9'
+readme-renderer==44.0 ; python_full_version >= '3.9'
 referencing==0.35.1 ; python_full_version < '3.9'
 referencing==0.36.2 ; python_full_version >= '3.9'
 requests==2.32.3
+requests-toolbelt==1.0.0
 rfc3339-validator==0.1.4
+rfc3986==2.0.0
 rfc3986-validator==0.1.1
 rich==13.9.4
 rpds-py==0.20.1 ; python_full_version < '3.9'
 rpds-py==0.22.3 ; python_full_version >= '3.9'
 ruff==0.9.6
+secretstorage==3.3.3 ; platform_machine != 'ppc64le' and platform_machine != 's390x' and sys_platform == 'linux'
 send2trash==1.8.3
 setuptools==75.3.0 ; python_full_version < '3.9'
 setuptools==75.8.0 ; python_full_version >= '3.9'
@@ -206,6 +226,7 @@ tornado==6.4.2
 traitlets==5.14.3
 triton==3.0.0 ; python_full_version < '3.9' and platform_machine == 'x86_64' and sys_platform == 'linux'
 triton==3.2.0 ; python_full_version >= '3.9' and platform_machine == 'x86_64' and sys_platform == 'linux'
+twine==6.1.0
 typeguard==4.4.0 ; python_full_version < '3.9'
 typer==0.15.1
 types-python-dateutil==2.9.0.20241206
@@ -225,4 +246,4 @@ websocket-client==1.8.0
 wheel==0.45.1 ; python_full_version < '3.9'
 widgetsnbextension==4.0.13
 zipp==3.20.2 ; python_full_version < '3.9'
-zipp==3.21.0 ; python_full_version == '3.9.*'
+zipp==3.21.0 ; (python_full_version >= '3.9' and python_full_version < '3.12' and platform_machine != 'ppc64le' and platform_machine != 's390x') or (python_full_version == '3.9.*' and platform_machine == 'ppc64le') or (python_full_version == '3.9.*' and platform_machine == 's390x')
