--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,8 @@ torch = ["torch>=1.13.1"]
         "lmcat>=0.2.0; python_version >= '3.11'",
         # tomli since no tomlib in python < 3.11
         "tomli>=2.1.0; python_version < '3.11'",
+        # for uploading
+        "twine",
     ]
     lint = [
         # lint
